<resources>
    <string name="app_name">Customer Service Helper</string>
    <string name="backdrop">Backdrop</string>
    <string name="customer">Customer</string>
    <string name="monitor">Monitor</string>

    <!--<string name="topbanner">ca-app-pub-2390888048112065/8348170035</string> live-->
    <string name="topbanner">ca-app-pub-3940256099942544/6300978111</string>

    <string name="help">Help</string>
    <string name="hold">Hold</string>
    <string name="hangup">Hang Up</string>
    <string name="served">customers served</string>
    <string name="correct">correct actions</string>
    <string name="phone">phone</string>
    <string name="timer">00:00:00</string>
    <string name="newsfeed">News feed:</string>

    <string name="signin_other_error">"Error Error Error"</string>
</resources>
